modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/license/css/main.scss
@import "_custom-variables";

.osb-portlet-license {
	#toggle_id_license_key_searchadvanced {
		padding-bottom: 1em;
	}

	#toggle_id_license_key_searchsimple {
		input {
			border-radius: 2px;
		}
	}

	.advanced-search {
		.form-control.search-query {
			background-color: $color-white;
			border: 1px solid $color-border;
			border-radius: $border-radius;
		}

		.input-group-btn .btn-default {
			border-radius: $border-radius;
			margin-left: 16px;
		}
	}

	.btn-generate-new-license {
		margin-bottom: $margin-default;
	}

	.cluster {
		background-color: $color-info-background;
		border: 1px solid $color-border;
		border-radius: $border-radius;
		margin: $margin-default 0;
		padding: 16px;

		&.highlight-cluster {
			border-color: $color-info-border;
		}
	}

	.form-group .control-label {
		font-weight: $font-weight-semi-bold;
	}

	.info {
		font-size: 10px;
		padding: 10px;
		vertical-align: bottom;

		a {
			vertical-align: bottom;
		}
	}

	.large-btn {
		margin-top: 1em;
		padding: 5px 15px;
		text-decoration: none;
	}

	.lfr-autorow-controls {
		bottom: 3.5px;
		margin: 0;
	}

	.lfr-form-row .aui-field {
		margin-right: 10px;
	}

	.lfr-input-date .form-control {
		background-color: $color-white;
		border-color: $color-border;
		margin-bottom: $margin-default;
	}

	.lfr-search-wrapper-container {
		margin-top: 36px;
	}

	.license-duration {
		.form-group-inline {
			margin: 0;
		}

		.lfr-input-date input {
			display: inline-block;
			width: 20%;
		}
	}

	.license-info-label {
		display: block;
		font-weight: $font-weight-semi-bold;
		margin-top: 16px;
	}

	.license-input-heading {
		border-bottom: 1px solid $color-border;
		margin-top: 0.5em;
		padding-bottom: 0.25em;
	}

	.license-key-controls {
		margin-top: $margin-default;

		.license-key-control-icon {
			display: block;
			margin-bottom: 16px;
		}
	}

	.merge-license {
		border: 1px solid $color-border;
	}

	.multiple-select {
		height: 100px;
	}

	.panel-heading {
		position: relative;
	}

	.select-account-entry {
		background-color: $color-white;
		color: $secondary-text-color;
		width: auto;
	}

	.separator {
		margin: 15px;
	}

	.table-cell {
		a {
			color: $color-default;
		}

		&.first {
			vertical-align: middle;
		}
	}

	.taglib-search-toggle-advanced-wrapper .taglib-search-toggle-advanced {
		background-color: $color-white;
		border-color: $color-border;
		border-radius: $border-radius;
		margin-bottom: $margin-default;
	}

	.view-license-dialog {
		input[type=button] {
			margin-top: 30px;
		}

		.content {
			margin: 10px;
			text-align: center;
			width: 50vw;
		}
	}
}

